# portman

./: .gitattributes  README.md
.bruno/: bruno.json
.bruno/api/: folder.bru
.bruno/api/auth/: validate_auth.bru
.bruno/core/: folder.bru
.bruno/environments/: Portman.bru
.github/: CONTRIBUIING.yml  CONTRIBUTING.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: api.yaml  bots.yaml  core.yaml  issues.yaml  rust.yml  zig.yaml
.proto/: orders.proto
.resources/: bruno.json
.resources/environments/: Portman.bru
.terraform/: main.tf
api/: conf.go  gen.go  go.mod  go.sum  main.go  mw.go  sqlc.yaml
api/commands/: ticker.sql  users.sql
api/handlers/: auth_handler.go  order_handler.go  ticker_handler.go  types.go  users_handler.go
api/middlewares/: auth.go  chain.go  logging.go
api/proto/: orders.pb.go  orders_grpc.pb.go
api/repositories/: models.go  orders.sql.go  ticker.sql.go  tickers.sql.go  users.sql.go
api/schemas/: 20251115150900_create_status_type.sql  20251115150900_create_tickers_table.sql  20251115162738_create_users_table.sql  20251115165030_seed_users_table.sql  ticker.sql
api/services/: cache.go  chain.go  core.go  hash.go  mail.go  middlewares.go
api/templates/: otp.tmpl
assets/: portman.excalidraw
bots/: .gitignore  build.zig.zon  cli.py  main.py  manager.py  pyproject.toml  test_bots.py  worker.py
bots/common/: config.py  constants.py  models.py  typings.py
bots/core/: manager.py  worker.py
bots/test/: test_common.py  test_manager.py  test_worker.py
bots/tests/: test_common.py  test_manager.py
cli/: build.zig.zon
core/: .gitignore  Cargo.toml  build.rs
core/proto/: orders.proto
core/src/: config.rs  configs.rs  handlers.rs  main.rs  models.rs  order_book.rs  orders.rs  server.rs  store.rs
core/src/repositories/: mod.rs  ticker_repo.rs
docs/: .gitignore  mdx-components.ts  package.json  pnpm-lock.yaml  tsconfig.json
lang/: CHANGELOG.md  portman-lang.cabal
linux/: .gitignore  CMakeLists.txt  CMakePresets.json
linux/src/: main.cpp
mobile/: package.json  pnpm-lock.yaml
services/: pom.xml
tests/: pom.xml
tools/: go.mod
ui/: build.zig  build.zig.zon
ui/src/: cartesian.zig  example.zig  global.zig  main.zig  model.zig  root.zig  router.zig
web/: package.json  pnpm-lock.yaml
windows/: Program.cs  pom.xml  windows.sln
(+49 files in other folders)
