[package]
name = "portman_core"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
questdb-rs = "5.0.0"
serde_json = "1.0.145"
thiserror = "2.0.16"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.226", features = ["derive"] }
sqlx = { version = "0.8.6", features = [ "postgres", "runtime-tokio" ] } 
