[package]
name = "portman_core"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
questdb-rs = "5.0.0"
serde_json = "1.0.145"
thiserror = "2.0.16"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.226", features = ["derive"] }
sqlx = { version = "0.8.6", features = [ "postgres", "runtime-tokio" ] } 
dotenv = "0.15.0"
anyhow = "1.0.100"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tower-http = { version = "0.6.6", features = ["trace"] }
