cabal-version:      3.0
name:               portman-lang
version:            0.1.0.0
synopsis:           NONE
-- description:
homepage:           NONE
license:            NONE
author:             Simon Samuel
maintainer:         salviensky@gmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable portman-lang
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
